--- a/src/sensor_fusion/config/ekf.yaml
+++ b/src/sensor_fusion/config/ekf.yaml
@@ -3,7 +3,8 @@ ekf_filter_node:
   ros__parameters:
     frequency: 30.0
     sensor_timeout: 0.1
-    two_d_mode: false
+    two_d_mode: true
+    use_sim_time: true
     transform_time_offset: 0.0
     transform_timeout: 0.0
     print_diagnostics: true
@@ -17,13 +18,13 @@ ekf_filter_node:
     # Odometry frame
     odom_frame: odom
     # Base frame
-    base_link_frame: base_link
+    base_link_frame: base_footprint
     # World frame (ENU)
     world_frame: odom
     
     # Configuration of input sources
     # IMU data: provides orientation and angular velocity
-    imu0: /imu/data
+    imu0: /imu
     imu0_config: [false, false, false,    # x, y, z position
                   true,  true,  true,     # roll, pitch, yaw orientation
                   false, false, false,    # x, y, z velocity
