refactor: Restructure repository for defense-grade architecture
- Remove redundant empty packages:
  * src/localization/ (superseded by rover_mapping)
  * src/navigation/ (superseded by rover_navigation)
  * src/bringup/ (empty placeholder)
  * src/rover_localization/ (incomplete stub)

- Rename sensor_fusion → rover_localization:
  * Establishes consistent rover_* naming convention
  * Clarifies package purpose (EKF-based state estimation)
  * Updates all internal references and dependencies

Final structure:
- rover_description: Robot model & URDF
- rover_simulation: Gazebo integration
- rover_localization: EKF state estimation
- rover_mapping: SLAM Toolbox
- rover_navigation: Nav2 stack
- sensor_drivers: Low-level interfaces
- tools: Development utilities
- vehicle_interface: Hardware abstraction

All packages now follow defense-grade principles:
- Clear functional separation
- Consistent naming
- No redundancy
- Modular and maintainable

--- a/src/rover_localization/package.xml
+++ b/src/rover_localization/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>sensor_fusion</name>
+  <name>rover_localization</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>EKF-based state estimation and localization for the UGV platform</description>
   <maintainer email="pandey.himanshu27@google.com">ugv_dev</maintainer>
   <license>TODO: License declaration</license>
 
