--- a/src/rover_localization/package.xml
+++ b/src/rover_localization/package.xml
@@ -4,7 +4,7 @@
   <name>rover_localization</name>
   <version>0.0.0</version>
   <description>EKF-based state estimation and localization for the UGV platform</description>
-  <maintainer email="pandey.himanshu27@google.com">ugv_dev</maintainer>
+  <maintainer email="maintainer@ugv-autonomy.local">UGV Development Team</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
