--- a/src/rover_localization/config/ekf.yaml
+++ b/src/rover_localization/config/ekf.yaml
@@ -6,11 +6,11 @@ ekf_filter_node:
     two_d_mode: true
     use_sim_time: true
     transform_time_offset: 0.0
-    transform_timeout: 0.0
+    transform_timeout: 0.1
     print_diagnostics: true
-    debug: false
+    debug: true
    
-    publish_tf: true
+    publish_tf: false
     publish_acceleration: false
     
     # Map frame (will be provided by SLAM or GPS)
@@ -25,23 +25,23 @@ ekf_filter_node:
     # Configuration of input sources
     # IMU data: provides orientation and angular velocity
     imu0: /imu
-    imu0_config: [false, false, false,    # x, y, z position
-                  true,  true,  true,     # roll, pitch, yaw orientation
-                  false, false, false,    # x, y, z velocity
-                  true,  true,  true,     # roll, pitch, yaw angular velocity  
-                  true,  true,  true]     # x, y, z linear acceleration
+    imu0_config: [false, false, false,
+                  false, false, true,   # roll, pitch, yaw orientation (only yaw for 2d)
+                  false, false, false,
+                  false, false, true,   # roll, pitch, yaw angular velocity (only yaw)
+                  false, false, false]
     imu0_differential: false
-    imu0_relative: false
+    imu0_relative: true
     imu0_queue_size: 10
     imu0_remove_gravitational_acceleration: true
     
     # Wheel odometry from ros2_control (differential drive)
-    odom0: /diff_drive_controller/odom
-    odom0_config: [false, false, false,   # x, y, z position
-                   false, false, false,   # roll, pitch, yaw orientation
-                   true,  true, false,    # x, y, z velocity (only x, y from wheels)
-                   false, false, true,    # roll, pitch, yaw angular velocity (yaw from wheels)
-                   false, false, false]   # x, y, z linear acceleration
+    odom0: /odom
+    odom0_config: [false, false, false,  # x, y, z position
+                   false, false, false,  # roll, pitch, yaw orientation
+                   true,  true,  false,  # x, y, z velocity 
+                   false, false, true,   # roll, pitch, yaw angular velocity
+                   false, false, false]  # x, y, z linear acceleration
     odom0_differential: false
     odom0_relative: false
     odom0_queue_size: 10
