--- a/src/rover_mapping/config/mapper_params_online_async.yaml
+++ b/src/rover_mapping/config/mapper_params_online_async.yaml
@@ -10,12 +10,14 @@ slam_toolbox:
     ceres_loss_function: None
 
     # Toolbox Parameters
+    use_sim_time: true
     odom_frame: odom
     map_frame: map
     base_frame: base_footprint
     scan_topic: /scan
     use_map_saver: true
     mode: mapping # or localization
+    min_laser_range: 0.2 # Avoid 0.0 warning and potential crash
 
     # Logger Parameters
     # (Default values are usually sufficient)
