--- a/src/rover_navigation/config/nav2_params.yaml
+++ b/src/rover_navigation/config/nav2_params.yaml
@@ -71,10 +71,9 @@ bt_navigator:
     - nav2_goal_updater_node_bt_node
     - nav2_recovery_node_bt_node
     - nav2_pipeline_sequence_bt_node
-    - nav2_round_robin_bt_node
+    - nav2_round_robin_node_bt_node
     - nav2_transform_available_condition_bt_node
     - nav2_time_expired_condition_bt_node
-    - nav2_path_expirer_bt_node
     - nav2_distance_traveled_condition_bt_node
     - nav2_single_trigger_bt_node
     - nav2_is_battery_charging_condition_bt_node
@@ -86,8 +85,6 @@ bt_navigator:
     - nav2_goal_checker_selector_bt_node
     - nav2_controller_cancel_bt_node
     - nav2_path_longer_on_approach_bt_node
-    - nav2_wait_at_waypoint_action_bt_node
-    - nav2_discretize_path_action_bt_node
 
 controller_server:
   ros__parameters:
@@ -114,7 +111,7 @@ controller_server:
       yaw_goal_tolerance: 0.25
     # FollowPath: Regulated Pure Pursuit
     FollowPath:
-      plugin: "regulated_pure_pursuit_controller::RegulatedPurePursuitController"
+      plugin: "nav2_regulated_pure_pursuit_controller::RegulatedPurePursuitController"
       desired_linear_vel: 0.5
       lookahead_dist: 0.6
       min_lookahead_dist: 0.3
@@ -234,13 +231,13 @@ behavior_server:
     cycle_frequency: 10.0
     behavior_plugins: ["spin", "backup", "wait", "drive_on_heading"]
     spin:
-      plugin: "nav2_behaviors::Spin"
+      plugin: "nav2_behaviors/Spin"
     backup:
-      plugin: "nav2_behaviors::BackUp"
+      plugin: "nav2_behaviors/BackUp"
     wait:
-      plugin: "nav2_behaviors::Wait"
+      plugin: "nav2_behaviors/Wait"
     drive_on_heading:
-      plugin: "nav2_behaviors::DriveOnHeading"
+      plugin: "nav2_behaviors/DriveOnHeading"
     global_frame: odom
     robot_base_frame: base_footprint
     transform_tolerance: 0.1
